src/styles.css
body {
  font-family: "PT Sans", sans-serif;
  background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  color: #142d4c;
}

h1 {
  font-size: 22px;
  font-weight: 100;
  line-height: 28px;
  margin: 0;
}

li.description {
  list-style-type: none;
  font-size: 14px;
  font-weight: 100;
  line-height: 1.3;
  text-align: left;
}

li:first-letter {
  text-transform: capitalize;
}

a {
  color: #589aeb;
  text-decoration: underline;
}

a:hover {
  color: #142d4c;
}

#city-input {
  font-size: 14px;
  color: #142d4c;
  line-height: 1.3;
  background-color: white;
  border: none;
  border-radius: 20px;
  background-repeat: no-repeat;
  background-position: 95% 80%;
  width: 100%;
  padding: 10px;
  cursor: auto;
}

.weather-app-wrapper {
  max-width: 600px;
  margin: 30px auto;
}

.weather-app {
  border: 1px solid #142d4c;
  padding: 20px;
  padding-top: 0px;
  border-radius: 10px;
  margin-top: 50px;
}

.row {
  margin-top: 40px;
}

.temperature {
  position: relative;
  top: 10px;
  font-size: 64px;
  font-weight: 100;
  line-height: 1;
  margin: 0.5;
}

.weather-temperature img {
  position: relative;
  margin-right: 5px;
  margin-top: 10px;
  height: 64px;
  width: 64px;
}

.units {
  position: relative;
  top: -24px;
}

.weather-temperature .active {
  color: #142d4c;
  cursor: default;
}

.weather-temperature .active:hover {
  text-decoration: none;
}

.scrolling-wrapper {
  overflow-x: auto;
}

.card-block {
  height: 100px;
  width: 100px;
  margin: 5px;
  padding: 5px;
  background-color: transparent;
  border: none;
  transition: all 0.2s ease-in-out;
}

::-webkit-scrollbar {
  width: 5px;
  height: 10px;
}

::-webkit-scrollbar-track {
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #fff;
}

